Checking in the second chapter.

--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -87,6 +87,8 @@
 \newcommand{\apj}{Astrophys.~J.}
 \newcommand{\aj}{Astron.~J.}
 \newcommand{\araa}{Annu.~Rev.~Astron.~Astrophys.}
+\newcommand{\pasp}{Proc.~Astron.~Soc.~Pac.}
+\newcommand{\mnras}{Mon.~Not.~Roy.~Astron.~Soc.}
 
 %----------------------------------------------------------------------------------------
 
@@ -234,12 +236,13 @@ In addition to the text, this book contains five problem sets, which are intersp
 \mainmatter
 
 %----------------------------------------------------------------------------------------
-%	CHAPTER 1
+%	CHAPTERS
 %----------------------------------------------------------------------------------------
 
 %\chapter{Chapter 1 Title}
 %\label{ch:1}
 \input{chapters/chapter1.tex}
+\input{chapters/chapter2.tex}
 
 %------------------------------------------------
 
