--- a/symbols.tex
+++ b/symbols.tex
@@ -1,2 +1,8 @@
+% Local symbols
 \newcommand{\kb}{k_{\mathrm{B}}}
 \newcommand{\msun}{M_{\odot}}
+\newcommand{\rsun}{R_{\odot}}
+\newcommand{\lsun}{L_{\odot}}
+
+% AAStex symbols
+\usepackage{amssymb}
