Missed files in last commit.

--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -241,8 +241,15 @@ In addition to the text, this book contains five problem sets, which are intersp
 
 %\chapter{Chapter 1 Title}
 %\label{ch:1}
+\part{Introduction and Phenomenology}
+
 \input{chapters/chapter1.tex}
 \input{chapters/chapter2.tex}
+
+\part{Physical Processes}
+
+\input{chapters/chapter3.tex}
+\input{chapters/chapter4.tex}
 
 %------------------------------------------------
 
