--- a/symbols.tex
+++ b/symbols.tex
@@ -3,6 +3,13 @@
 \newcommand{\msun}{M_{\odot}}
 \newcommand{\rsun}{R_{\odot}}
 \newcommand{\lsun}{L_{\odot}}
+\newcommand{\vecr}{\mathbf{r}}
+\newcommand{\vecv}{\mathbf{v}}
+\newcommand{\vecx}{\mathbf{x}}
+\newcommand{\veck}{\mathbf{k}}
+\newcommand{\vecB}{\mathbf{B}}
+\newcommand{\vecf}{\mathbf{f}}
+\newcommand{\nhat}{\hat{\mathbf{n}}}
 
 % AAStex symbols
 \usepackage{amssymb}
