Changing captions for consistent capitalization.

--- a/problems/probsol1.tex
+++ b/problems/probsol1.tex
@@ -75,7 +75,7 @@ The plot of the starburst99 output is shown in Figure \ref{fig:hw1sol1}. The sol
 
 \begin{figure}
 \includegraphics[width=\linewidth]{graphics/hw1sol1}
-\caption[Solution to Problem Set~\thesolutionset, Problem~\theenumi\theenumii]{
+\caption[Solution to problem set~\thesolutionset, problem~\theenumi\theenumii]{
 \label{fig:hw1sol1}
 Luminosity normalized by star formation rate for a normal IMF (solid line) and a top-heavy IMF (dashed line).
 }
