--- a/symbols.tex
+++ b/symbols.tex
@@ -10,6 +10,20 @@
 \newcommand{\vecB}{\mathbf{B}}
 \newcommand{\vecf}{\mathbf{f}}
 \newcommand{\nhat}{\hat{\mathbf{n}}}
+\newcommand{\vecS}{\mathbf{S}}
+\newcommand{\vecI}{\mathbf{I}}
+\newcommand{\vecPi}{\mathbf{\Pi}}
+\newcommand{\vecT}{\mathbf{T}}
 
 % AAStex symbols
 \usepackage{amssymb}
+
+% Journals
+\newcommand{\aap}{Astron.~\& Astrophys.}
+\newcommand{\apj}{Astrophys.~J.}
+\newcommand{\apjs}{Astrophys.~J.~Supp.}
+\newcommand{\apjl}{Astrophys.~J.}
+\newcommand{\aj}{Astron.~J.}
+\newcommand{\araa}{Annu.~Rev.~Astron.~Astrophys.}
+\newcommand{\pasp}{Proc.~Astron.~Soc.~Pac.}
+\newcommand{\mnras}{Mon.~Not.~Roy.~Astron.~Soc.}
