Chapter 8 is now done.

--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -285,6 +285,8 @@ In addition to the text and reading, this book contains five problem sets, which
 
 \part{Star Formation Processes and Problems}
 
+\input{chapters/chapter8.tex}
+
 \appendix
 
 \chapter{Solutions to Problem Sets}
