--- a/symbols.tex
+++ b/symbols.tex
@@ -3,6 +3,7 @@
 \newcommand{\msun}{M_{\odot}}
 \newcommand{\rsun}{R_{\odot}}
 \newcommand{\lsun}{L_{\odot}}
+\newcommand{\avir}{\alpha_{\mathrm{vir}}}
 \newcommand{\vecr}{\mathbf{r}}
 \newcommand{\vecv}{\mathbf{v}}
 \newcommand{\vecx}{\mathbf{x}}
@@ -27,3 +28,4 @@
 \newcommand{\araa}{Annu.~Rev.~Astron.~Astrophys.}
 \newcommand{\pasp}{Proc.~Astron.~Soc.~Pac.}
 \newcommand{\mnras}{Mon.~Not.~Roy.~Astron.~Soc.}
+\newcommand{\pasj}{Proc.~Astron.~Soc.~Japan}
