Checking in problem set 2 and the rest of chapter 8.

--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -286,12 +286,14 @@ In addition to the text and reading, this book contains five problem sets, which
 \part{Star Formation Processes and Problems}
 
 \input{chapters/chapter8.tex}
+\input{problems/probset2.tex}
 
 \appendix
 
 \chapter{Solutions to Problem Sets}
 
 \input{problems/probsol1.tex}
+\input{problems/probsol2.tex}
 
 %----------------------------------------------------------------------------------------
 %	PROBLEM SET SOLUTIONS
