--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -287,6 +287,7 @@ In addition to the text and reading, this book contains five problem sets, which
 
 \input{chapters/chapter8.tex}
 \input{problems/probset2.tex}
+\input{chapters/chapter9.tex}
 
 \appendix
 
