Adding chapters 10 and 11, and the first part of chapter 12.

--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -288,6 +288,9 @@ In addition to the text and reading, this book contains five problem sets, which
 \input{chapters/chapter8.tex}
 \input{problems/probset2.tex}
 \input{chapters/chapter9.tex}
+\input{chapters/chapter10.tex}
+\input{chapters/chapter11.tex}
+\input{chapters/chapter12.tex}
 
 \appendix
 
