--- a/symbols.tex
+++ b/symbols.tex
@@ -6,6 +6,7 @@
 \newcommand{\avir}{\alpha_{\mathrm{vir}}}
 \newcommand{\vecr}{\mathbf{r}}
 \newcommand{\vecv}{\mathbf{v}}
+\newcommand{\vecg}{\mathbf{g}}
 \newcommand{\vecx}{\mathbf{x}}
 \newcommand{\veck}{\mathbf{k}}
 \newcommand{\vecB}{\mathbf{B}}
