Up through chapter 13 is now complete.

--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -85,6 +85,9 @@ Star Formation%
 %----------------------------------------------------------------------------------------
 % MRK customizations
 
+% Bold math symbols
+\usepackage{bm}
+
 % Symbols used throughout
 \input{symbols.tex}
 
@@ -291,6 +294,8 @@ In addition to the text and reading, this book contains five problem sets, which
 \input{chapters/chapter10.tex}
 \input{chapters/chapter11.tex}
 \input{chapters/chapter12.tex}
+\input{problems/probset3.tex}
+\input{chapters/chapter13.tex}
 
 \appendix
 
@@ -298,6 +303,7 @@ In addition to the text and reading, this book contains five problem sets, which
 
 \input{problems/probsol1.tex}
 \input{problems/probsol2.tex}
+\input{problems/probsol3.tex}
 
 %----------------------------------------------------------------------------------------
 %	PROBLEM SET SOLUTIONS
