--- a/symbols.tex
+++ b/symbols.tex
@@ -16,6 +16,8 @@
 \newcommand{\vecI}{\mathbf{I}}
 \newcommand{\vecPi}{\mathbf{\Pi}}
 \newcommand{\vecT}{\mathbf{T}}
+\newcommand{\veco}{{\bm \Omega}}
+\newcommand{\ehat}{\hat{\mathbf{e}}}
 
 % AAStex symbols
 \usepackage{amssymb}
@@ -30,3 +32,4 @@
 \newcommand{\pasp}{Proc.~Astron.~Soc.~Pac.}
 \newcommand{\mnras}{Mon.~Not.~Roy.~Astron.~Soc.}
 \newcommand{\pasj}{Proc.~Astron.~Soc.~Japan}
+\newcommand{\nat}{Nature}
