Chapter 14 checked in.

--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -184,7 +184,7 @@ Original version: \the\year\ \thanklessauthor
 \begin{doublespace}
 \noindent\fontsize{18}{22}\selectfont\itshape
 \nohyphenation
-Dedicated to my students, who have contributed tremendously to the development of this book.
+Dedicated to my son, Ethan Anderson-Krumholz, to my wife, Rebecca Anderson, and to my students, who have contributed tremendously to the development of this book.
 \end{doublespace}
 \vfill
 \vfill
@@ -296,6 +296,7 @@ In addition to the text and reading, this book contains five problem sets, which
 \input{chapters/chapter12.tex}
 \input{problems/probset3.tex}
 \input{chapters/chapter13.tex}
+\input{chapters/chapter14.tex}
 
 \appendix
 
