--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -297,6 +297,8 @@ In addition to the text and reading, this book contains five problem sets, which
 \input{problems/probset3.tex}
 \input{chapters/chapter13.tex}
 \input{chapters/chapter14.tex}
+\input{chapters/chapter15.tex}
+\input{chapters/chapter16.tex}
 
 \appendix
 
