Problem set 4 now included. Getting there...

--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -299,58 +299,20 @@ In addition to the text and reading, this book contains five problem sets, which
 \input{chapters/chapter14.tex}
 \input{chapters/chapter15.tex}
 \input{chapters/chapter16.tex}
+\input{problems/probset4.tex}
 
 \appendix
+
+%----------------------------------------------------------------------------------------
+%	PROBLEM SET SOLUTIONS
+%----------------------------------------------------------------------------------------
 
 \chapter{Solutions to Problem Sets}
 
 \input{problems/probsol1.tex}
 \input{problems/probsol2.tex}
 \input{problems/probsol3.tex}
-
-%----------------------------------------------------------------------------------------
-%	PROBLEM SET SOLUTIONS
-%----------------------------------------------------------------------------------------
-
-
-%------------------------------------------------
-
-%\section{Section 1 - Fullwidth Environment Example}
-
-%\begin{fullwidth}
-%\lipsum[5]
-%\end{fullwidth}
-
-%\subsection{Subsection 1}
-
-%\lipsum[6-7]
-
-%\subsection{Subsection 2}
-
-%\lipsum[7-8]
-
-%------------------------------------------------
-
-%\section{Section 2}
-
-%\subsection{Subsection 1}
-
-%\lipsum[9-10]
-
-%\subsection{Subsection 2}
-
-%\lipsum[11-12]
-
-%----------------------------------------------------------------------------------------
-%	CHAPTER 2
-%----------------------------------------------------------------------------------------
-
-%\chapter{Chapter 2 Title}
-%\label{ch:2}
-
-%\lipsum[13-20]
-
-%----------------------------------------------------------------------------------------
+\input{problems/probsol4.tex}
 
 \backmatter
 
