--- a/symbols.tex
+++ b/symbols.tex
@@ -18,6 +18,7 @@
 \newcommand{\vecT}{\mathbf{T}}
 \newcommand{\veco}{{\bm \Omega}}
 \newcommand{\ehat}{\hat{\mathbf{e}}}
+\newcommand{\alphab}{\alpha_{\mathrm{B}}}
 
 % AAStex symbols
 \usepackage{amssymb}
