--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -300,6 +300,7 @@ In addition to the text and reading, this book contains five problem sets, which
 \input{chapters/chapter15.tex}
 \input{chapters/chapter16.tex}
 \input{problems/probset4.tex}
+\input{chapters/chapter17.tex}
 
 \appendix
 
