Checked in up through chapter 18.

--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -301,6 +301,7 @@ In addition to the text and reading, this book contains five problem sets, which
 \input{chapters/chapter16.tex}
 \input{problems/probset4.tex}
 \input{chapters/chapter17.tex}
+\input{chapters/chapter18.tex}
 
 \appendix
 
