--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -302,6 +302,9 @@ In addition to the text and reading, this book contains five problem sets, which
 \input{problems/probset4.tex}
 \input{chapters/chapter17.tex}
 \input{chapters/chapter18.tex}
+\input{chapters/chapter19.tex}
+\input{chapters/chapter20.tex}
+\input{problems/probset5.tex}
 
 \appendix
 
@@ -315,6 +318,7 @@ In addition to the text and reading, this book contains five problem sets, which
 \input{problems/probsol2.tex}
 \input{problems/probsol3.tex}
 \input{problems/probsol4.tex}
+\input{problems/probsol5.tex}
 
 \backmatter
 
