--- a/symbols.tex
+++ b/symbols.tex
@@ -24,6 +24,8 @@
 \usepackage{amssymb}
 
 % Journals
+\newcommand{\physrep}{Phys.~Rep.}
+\newcommand{\aapr}{Astron.\& Astrophys.~Rev.}
 \newcommand{\aap}{Astron.~\& Astrophys.}
 \newcommand{\apj}{Astrophys.~J.}
 \newcommand{\apjs}{Astrophys.~J.~Supp.}
