Fixed a problem with fonts for boldface greek symbols.

--- a/symbols.tex
+++ b/symbols.tex
@@ -14,7 +14,7 @@
 \newcommand{\nhat}{\hat{\mathbf{n}}}
 \newcommand{\vecS}{\mathbf{S}}
 \newcommand{\vecI}{\mathbf{I}}
-\newcommand{\vecPi}{\mathbf{\Pi}}
+\newcommand{\vecPi}{\boldsymbol{\Pi}}
 \newcommand{\vecT}{\mathbf{T}}
 \newcommand{\veco}{{\bm \Omega}}
 \newcommand{\ehat}{\hat{\mathbf{e}}}
