--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -21,10 +21,10 @@
 %----------------------------------------------------------------------------------------
 
 \documentclass[twoside]{tex/tufte-book} % Use the tufte-book class which in turn uses the tufte-common class
-
+\pdfoutput=1
 \usepackage{natbib}
 
-\hypersetup{colorlinks} % Comment this line if you don't wish to have colored links
+%\hypersetup{colorlinks} % Comment this line if you don't wish to have colored links
 
 \usepackage{microtype} % Improves character and word spacing
 
@@ -328,11 +328,12 @@ In addition to the text and reading, this book contains five problem sets, which
 \input{chapters/chapter14.tex}
 \input{chapters/chapter15.tex}
 \input{chapters/chapter16.tex}
-\input{problems/probset4.tex}
 \input{chapters/chapter17.tex}
+\input{problems/probset4.tex}
 \input{chapters/chapter18.tex}
 \input{chapters/chapter19.tex}
 \input{chapters/chapter20.tex}
+\input{chapters/chapter21.tex}
 \input{problems/probset5.tex}
 
 \appendix
